--- a/abc_main/index.html
+++ b/abc_main/index.html
@@ -240,7 +240,7 @@ $(function(){
       <li><a href="#" onclick="document.getElementById('contentiframe').src='./ProfitModel/revenue_model.php'">營收來源</a> </li>
     </ul>
   </li>
-   <li><a href="#" class="arrow" target="_self">資源整合</a>
+   <li><a href="#" class="arrow" target="_self">投入與合一</a>
     <ul style="display: none;" id="subMgm" class="second-menu">
       <li><a href="#" onclick="document.getElementById('contentiframe').src='./ResourceIntegration/fund_raising.html'" >資金募集</a></li>
       <li><a href="#" onclick="document.getElementById('contentiframe').src='./ResourceIntegration/research_and_develop.php'">研究 / 開發</a>
